# CENG469-TERM-PROJECT

./: .gitignore  CMakeLists.txt  Makefile  README.md  app  basic_window.cpp  imgui.ini  main  main.cpp
app.dSYM/Contents/Resources/DWARF/: app
app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
dependencies/include/GL/: glew.h
dependencies/include/GLFW/: glfw3.h
dependencies/include/glm/detail/: setup.hpp
headers/: Camera.h  Color.h  Cubemap.h  EBO.h  MedianCut.h  Mesh.h  Model.h  Normal.h  Object.h  Parser.h  VAO.h  VBO.h  Vertex.h  shaderUtils.h
imgui/: imgui_impl_glfw.cpp
interfaces/: IControllable.h  IInputListener.h
median_cut_test/: main.py  median_cut.py
pages/: blogpost.md
resources/Shaders/: frag.glsl  lightprobefrag.glsl  mirrorfrag.glsl  skybox.frag  skybox.vert  vert.glsl
resources/shaders/: default.frag  default.vert  disco.frag  glass.frag  glossy.frag  light.frag  lightprobefrag.glsl  mediancut.glsl  mirrorfrag.glsl  vert.glsl
sources/: Camera.cpp  Cubemap.cpp  EBO.cpp  MedianCut.cpp  Mesh.cpp  VAO.cpp  VBO.cpp  shaderUtils.cpp
